[gd_scene load_steps=20 format=3 uid="uid://6j33tlh32f6t"]

[ext_resource type="Texture2D" uid="uid://da451pgifen1p" path="res://assets/roadTextures_tilesheet.png" id="1_llju8"]
[ext_resource type="Script" path="res://scripts/puzzle.gd" id="1_yyh7b"]
[ext_resource type="Script" path="res://scripts/player_puzzle.gd" id="2_m8woo"]
[ext_resource type="Texture2D" uid="uid://sbyaab3evu0m" path="res://assets/character_robot_sheet.png" id="3_ssq8w"]
[ext_resource type="Texture2D" uid="uid://jg1s6qp0548v" path="res://assets/overlay.png" id="5_3ah4i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gbjt0"]
texture = ExtResource("1_llju8")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -23, -32, -23.5)
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 27, 32, 26, 32, 32, -32, 32)
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -25.5, -32, -25, 32, -32, 32)
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -32, 32, -32, 32, 32, 24, 32)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:7/0 = 0
11:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ni3fg"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/3 = SubResource("TileSetAtlasSource_gbjt0")

[sub_resource type="CircleShape2D" id="CircleShape2D_t5e4p"]
radius = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ck7po"]
atlas = ExtResource("3_ssq8w")
region = Rect2(0, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0i1x"]
atlas = ExtResource("3_ssq8w")
region = Rect2(96, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q70hw"]
atlas = ExtResource("3_ssq8w")
region = Rect2(192, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg4n8"]
atlas = ExtResource("3_ssq8w")
region = Rect2(288, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ki5"]
atlas = ExtResource("3_ssq8w")
region = Rect2(384, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_omxbd"]
atlas = ExtResource("3_ssq8w")
region = Rect2(480, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ded31"]
atlas = ExtResource("3_ssq8w")
region = Rect2(576, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lilgi"]
atlas = ExtResource("3_ssq8w")
region = Rect2(672, 512, 96, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_bj7gk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck7po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0i1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q70hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg4n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ki5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omxbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ded31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lilgi")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_scgfd"]
size = Vector2(20, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5glrc"]
size = Vector2(22, 27)

[node name="Puzzle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_yyh7b")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.174
anchor_right = 0.8
anchor_bottom = 0.826
offset_top = 0.0799866
offset_bottom = -0.0800171
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 704)
render_target_update_mode = 4

[node name="TileMap" type="TileMap" parent="SubViewportContainer/SubViewport"]
position = Vector2(0, 32)
tile_set = SubResource("TileSet_ni3fg")
format = 2
layer_0/tile_data = PackedInt32Array(65536, 3, 2, 524305, 3, 1, 65537, 3, 2, 131073, 3, 2, 196609, 3, 2, 262145, 3, 2, 327681, 3, 1, 327682, 589827, 0, 327683, 3, 1, 327684, 327683, 2, 327685, 3, 2, 262149, 3, 2, 196613, 3, 2, 131077, 3, 1, 131081, 3, 2, 131082, 3, 2, 327690, 3, 2, 393226, 589827, 3, 458762, 3, 2, 524298, 3, 1, 458761, 3, 0, 458760, 3, 2, 458759, 3, 0, 524295, 589827, 0, 589831, 589827, 2, 589832, 3, 2, 589833, 327683, 1, 589834, 3, 1, 589836, 3, 1, 589837, 393219, 1, 524301, 262147, 2, 524302, 3, 1, 524303, 262147, 3, 524304, 3, 1, 524296, 3, 1, 524297, 589827, 0, 524299, 393219, 1, 0, 3, 2, 1, 3, 2, 2, 3, 2, 3, 3, 2, 4, 3, 2, 5, 3, 2, 6, 3, 2, 7, 3, 2, 8, 3, 2, 9, 3, 2, 10, 3, 2, 11, 3, 2, 12, 3, 2, 13, 524291, 2, 14, 3, 2, 15, 3, 2, 16, 3, 2, 17, 3, 2, 131089, 3, 2, 196625, 3, 2, 262161, 3, 2, 327697, 3, 2, 393233, 3, 2, 458769, 3, 2, 458768, 3, 2, 458767, 3, 0, 458766, 3, 2, 458765, 3, 0, 458764, 3, 2, 524300, 3, 2, 458763, 3, 0, 393227, 3, 0, 327691, 3, 0, 262155, 3, 0, 196619, 327683, 3, 131083, 3, 2, 65547, 3, 1, 65552, 3, 2, 131088, 3, 2, 196624, 3, 2, 262160, 3, 2, 327696, 3, 2, 393232, 3, 2, 393231, 3, 0, 393230, 3, 2, 327694, 3, 2, 327693, 3, 0, 327692, 3, 2, 262156, 3, 2, 196620, 3, 1, 131084, 3, 2, 131085, 3, 0, 131086, 3, 2, 131087, 3, 0, 196623, 3, 0, 262159, 3, 0, 327695, 3, 0, 262158, 3, 2, 196622, 3, 2, 262157, 3, 0, 196621, 327683, 2, 393229, 3, 0, 393228, 3, 2, 393225, 589827, 0, 327689, 3, 0, 262153, 3, 0, 196617, 327683, 3, 196616, 3, 1, 196615, 327683, 1, 196614, 3, 2, 262150, 3, 2, 327686, 3, 2, 393222, 3, 1, 393223, 327683, 3, 393224, 3, 1, 327688, 3, 2, 262152, 3, 2, 262151, 3, 2, 131072, 3, 2, 196608, 3, 2, 262144, 3, 2, 327680, 3, 1, 393216, 3, 2, 458752, 3, 2, 524288, 3, 2, 589824, 3, 2, 589825, 3, 2, 589826, 3, 2, 589827, 3, 2, 589829, 3, 2, 589830, 3, 2, 524294, 3, 1, 458758, 3, 2, 393220, 327683, 1, 393219, 3, 2, 393218, 3, 0, 393217, 3, 2, 458753, 3, 2, 524289, 3, 2, 524290, 327683, 1, 458755, 3, 2, 458754, 3, 0, 524291, 3, 1, 589841, 3, 2, 589840, 3, 2, 589839, 3, 2, 589838, 3, 2, 65546, 3, 1, 65540, 3, 2, 65539, 3, 2, 65538, 3, 2, 131074, 327683, 0, 196610, 3, 0, 262146, 3, 0, 262147, 3, 2, 262148, 3, 0, 196612, 3, 0, 131076, 327683, 3, 131075, 3, 1, 196611, 3, 2, 65553, 3, 2, 589835, 3, 1, 327687, 3, 2, 262154, 3, 2, 65541, 3, 2, 65542, 3, 2, 65543, 327683, 0, 65544, 3, 1, 65545, 3, 1, 393221, 3, 1, 458757, 3, 2, 524293, 3, 1, 524292, 3, 1, 589828, 3, 2, 131078, 589827, 3, 131079, 3, 0, 131080, 3, 2, 458756, 3, 2, 196618, 3, 1, 65548, 3, 1, 65549, 589827, 0, 65550, 3, 1, 65551, 393219, 0, 655360, 3, 2, 655361, 3, 2, 655362, 3, 2, 655363, 3, 2, 655364, 3, 2, 655365, 3, 2, 655366, 3, 2, 655367, 3, 2, 655368, 3, 2, 655369, 3, 2, 655370, 3, 2, 655371, 3, 2, 655372, 3, 2, 655373, 3, 2, 655374, 3, 2, 655375, 3, 2, 655376, 3, 2, 655377, 3, 2)

[node name="CharacterBody2D" type="CharacterBody2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(62, 384)
collision_layer = 513
script = ExtResource("2_m8woo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/CharacterBody2D"]
shape = SubResource("CircleShape2D_t5e4p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SubViewportContainer/SubViewport/CharacterBody2D"]
position = Vector2(1.035, -9.01999)
scale = Vector2(0.424661, 0.424661)
sprite_frames = SubResource("SpriteFrames_bj7gk")
frame = 3
frame_progress = 0.763702

[node name="DownRay" type="RayCast2D" parent="SubViewportContainer/SubViewport/CharacterBody2D"]
target_position = Vector2(0, 32)

[node name="UpRay" type="RayCast2D" parent="SubViewportContainer/SubViewport/CharacterBody2D"]
target_position = Vector2(0, -32)

[node name="LeftRay" type="RayCast2D" parent="SubViewportContainer/SubViewport/CharacterBody2D"]
target_position = Vector2(-32, 0)

[node name="RightRay" type="RayCast2D" parent="SubViewportContainer/SubViewport/CharacterBody2D"]
target_position = Vector2(32, 0)

[node name="Start" type="StaticBody2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(20.255, 379.655)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/Start"]
position = Vector2(-29.255, 3.345)
shape = SubResource("RectangleShape2D_scgfd")

[node name="Finish" type="StaticBody2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(1162, 570.095)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/Finish"]
position = Vector2(0, 4.90503)
shape = SubResource("RectangleShape2D_scgfd")

[node name="FinishArea" type="Area2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(5.3, 38.87)
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/FinishArea"]
position = Vector2(1130.7, 534.13)
shape = SubResource("RectangleShape2D_5glrc")

[node name="TextureRect" type="TextureRect" parent="SubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3ah4i")
expand_mode = 2

[connection signal="body_entered" from="SubViewportContainer/SubViewport/FinishArea" to="." method="_on_finish_area_body_entered"]
